webApiExRate refactoring, try-with-resource